fixed minor styling issues, increased font size on mobile, added scroll to top button in the footer, added link to Hassan's page

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -94,8 +94,3 @@
     }
   }
 }
-
-
-@media (min-width: $laptop) {
-
-}
