--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -18,20 +18,22 @@
       color: $accent1;
     }
   }
+
+  .scroll-to-top {
+    @include flex(column, center, center);
+    font-size: 1.8rem;
+    margin-bottom: $spacing-m;
+    text-shadow: $dark-text-shadow;
+    visibility: hidden;
+  }
 }
 
 
 
 
 // ****MEDIA QUERIES****
-@media (min-width: $small-tablet) {
-
-}
-
 @media (min-width: $large-tablet) {
-
-}
-
-@media (min-width: $laptop) {
-
+  .footer .scroll-to-top {
+    visibility: visible;
+  }
 }
