--- a/styles/sass/partials/_general.scss
+++ b/styles/sass/partials/_general.scss
@@ -59,12 +59,6 @@ button {
 
 
 // ****MEDIA QUERIES****
-@media (min-width: $small-tablet) {
-  
-  
-}
-
-
 @media (min-width: $large-tablet) {
   .wrapper {
     max-width: 2000px;
@@ -72,10 +66,5 @@ button {
     margin: 0 auto;
     padding: 0;
   }
-}
-
-
-@media (min-width: $laptop) {
-
 }
 
