--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -45,6 +45,7 @@ header {
       background: $primary;
       padding-top: $spacing-l;
       text-align: center;
+      z-index: 100;
 
       // hidden on mobile
       display: none;
@@ -79,9 +80,6 @@ header {
 
 
 // ****MEDIA QUERIES****
-@media (min-width: $small-tablet) {
-
-}
 @media (min-width: $large-tablet) {
   header {
 
@@ -113,12 +111,4 @@ header {
       display: none;
     }
   }
-}
-
-
-
-
-
-@media (min-width: $laptop) {
-
 }
