--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -28,6 +28,7 @@
 
   &-link {
     font-weight: 600;
+    text-decoration: underline;
 
     @include hover-state {
       color: $accent1;
@@ -73,10 +74,6 @@
 
 
 // ****MEDIA QUERIES****
-@media (min-width: $small-tablet) {
-
-}
-
 
 @media (min-width: $large-tablet) {
   .project {
@@ -119,11 +116,4 @@
       grid-row: 2;
     }
   }
-
-
-}
-
-
-@media (min-width: $laptop) {
-
 }
