--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -12,7 +12,7 @@ html {
 body {
   color: white;
   font-family: $body;
-  font-size: 1.9rem;
+  font-size: 2.1rem;
   line-height: 1.5;
 }
 
@@ -24,7 +24,6 @@ h1, h2, h3 {
 
 .copy {
   margin: $spacing-m 0;
-  letter-spacing: 1px;
 }
 
 .title {
@@ -60,6 +59,10 @@ h1, h2, h3 {
 // MEDIA QUERIES
 
 @media (min-width: $small-tablet){
+  body {
+    font-size: 1.9rem;
+  }
+
   .title {
     font-size: 9rem;
   }
@@ -67,4 +70,5 @@ h1, h2, h3 {
   .subtitle {
     font-size: 4rem;
   }
+
 }
