--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,7 +244,7 @@ html {
 body {
   color: white;
   font-family: "Anonymous Pro", sans-serif;
-  font-size: 1.9rem;
+  font-size: 2.1rem;
   line-height: 1.5;
 }
 
@@ -256,7 +256,6 @@ h1, h2, h3 {
 
 .copy {
   margin: 30px 0;
-  letter-spacing: 1px;
 }
 
 .title {
@@ -290,6 +289,9 @@ h1, h2, h3 {
 }
 
 @media (min-width: 480px) {
+  body {
+    font-size: 1.9rem;
+  }
   .title {
     font-size: 9rem;
   }
@@ -414,6 +416,7 @@ header .nav ul {
   background: #5B4083;
   padding-top: 50px;
   text-align: center;
+  z-index: 100;
   display: none;
 }
 
@@ -643,18 +646,18 @@ header .nav .close {
 }
 
 .skills li:nth-child(3n + 1) .icon {
-  -webkit-filter: drop-shadow(4px 2px 0 #FD7C20) drop-shadow(1px 1px 0 #303030);
-          filter: drop-shadow(4px 2px 0 #FD7C20) drop-shadow(1px 1px 0 #303030);
+  -webkit-filter: drop-shadow(3px 2px 0 #FD7C20) drop-shadow(1px 1px 0 #303030);
+          filter: drop-shadow(3px 2px 0 #FD7C20) drop-shadow(1px 1px 0 #303030);
 }
 
 .skills li:nth-child(3n + 2) .icon {
-  -webkit-filter: drop-shadow(4px 2px 0 #DA07C8) drop-shadow(1px 1px 0 #303030);
-          filter: drop-shadow(4px 2px 0 #DA07C8) drop-shadow(1px 1px 0 #303030);
+  -webkit-filter: drop-shadow(3px 2px 0 #DA07C8) drop-shadow(1px 1px 0 #303030);
+          filter: drop-shadow(3px 2px 0 #DA07C8) drop-shadow(1px 1px 0 #303030);
 }
 
 .skills li:nth-child(3n + 3) .icon {
-  -webkit-filter: drop-shadow(4px 2px 0 #2287EF) drop-shadow(1px 1px 0 #303030);
-          filter: drop-shadow(4px 2px 0 #2287EF) drop-shadow(1px 1px 0 #303030);
+  -webkit-filter: drop-shadow(3px 2px 0 #2287EF) drop-shadow(1px 1px 0 #303030);
+          filter: drop-shadow(3px 2px 0 #2287EF) drop-shadow(1px 1px 0 #303030);
 }
 
 .skills .icon {
@@ -723,6 +726,7 @@ header .nav .close {
 
 .project-link {
   font-weight: 600;
+  text-decoration: underline;
 }
 
 .project-link:hover, .project-link:focus {
@@ -1001,4 +1005,32 @@ header .nav .close {
 
 .footer a:hover, .footer a:focus {
   color: #FD7C20;
+}
+
+.footer .scroll-to-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.8rem;
+  margin-bottom: 30px;
+  text-shadow: 1px 1px 0 #303030;
+  visibility: hidden;
+}
+
+@media (min-width: 768px) {
+  .footer .scroll-to-top {
+    visibility: visible;
+  }
 }
